--- a/index.html
+++ b/index.html
@@ -42,8 +42,10 @@
     <div>
       <h3 class="float-md-start mb-0">Fasta</h3>
       <nav class="nav nav-masthead justify-content-center float-md-end">
-        <a class="nav-link active" aria-current="page" href="#">Home</a>
-        <a class="nav-link" href="./privacy-policy.html">Privacy policy</a>
+        <a class="nav-link" target="_blank" href="./privacy-policy">Privacy policy</a>
+        <a class="nav-link" target="_blank" href="./license-agreement">License agreement</a>
+        <a class="nav-link" target="_blank" href="./driver-agreement">Driver agreement</a>
+        <a class="nav-link" target="_blank" href="./user-agreement">User agreement</a>
       </nav>
     </div>
   </header>
