--- a/index.html
+++ b/index.html
@@ -38,15 +38,9 @@
   <body class="d-flex h-100 text-center text-white bg-dark">
     
 <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-  <header class="mb-auto">
+  <header class="mb-auto justify-content-center">
     <div>
-      <h3 class="float-md-start mb-0">Fasta</h3>
-      <nav class="nav nav-masthead justify-content-center float-md-end">
-        <a class="nav-link" target="_blank" href="./privacy-policy">Privacy policy</a>
-        <a class="nav-link" target="_blank" href="./license-agreement">License agreement</a>
-        <a class="nav-link" target="_blank" href="./driver-agreement">Driver agreement</a>
-        <a class="nav-link" target="_blank" href="./user-agreement">User agreement</a>
-      </nav>
+      <h2 class="mb-0">Fasta</h3>
     </div>
   </header>
    
@@ -56,10 +50,13 @@
   </main>
 
   <footer class="mt-auto text-white-50">
+    <nav class="nav nav-masthead justify-content-center float-md-end">
+      <a class="nav-link" target="_blank" href="./privacy-policy">Privacy policy</a>
+      <a class="nav-link" target="_blank" href="./license-agreement">License agreement</a>
+      <a class="nav-link" target="_blank" href="./driver-agreement">Driver agreement</a>
+      <a class="nav-link" target="_blank" href="./user-agreement">User agreement</a>
+    </nav>
   </footer>
 </div>
-
-
-    
   </body>
 </html>
