--- a/driver-privacy-policy.html
+++ b/driver-privacy-policy.html
@@ -28,14 +28,14 @@
     <ul>
       <li>
         2.1. FASTA uses the data that a) you provide in <b>FASTA Driver app</b>, b) FASTA receives about you from your device and <b>FASTA Driver app</b>, c) FASTA receives by analysis of the data about how the Service for Driver is used, d) FASTA receives from our partners, e) you provide to the support team:
-        <ul>
-            <li>• User information in FASTA Driver app and checkout data: phone number, full name, driver license details, email, social security number (optional), national ID number (optional), date of birth, place of birth, gender, citizenship, residential address, photo, referral code (optional), operation experience as driver, numbers of executed orders in FASTA Driver app, car model and plate number;</li>
-            <li>• Location data: to receive and successfully complete orders near your location, you need to allow location access in the background. FASTA processes your location data, including to enable the Service for Driver, namely, to access orders and transfer data about the driver's location to the user of FASTA app. FASTA collects this data when the FASTA Driver app is running in the foreground (app open and on-screen) or background (app open but not on-screen) of your mobile device.</li>
-            <li>• Transaction data: date and time of the order, pick-up point, destination point, route, price, payment method;</li>
-            <li>• Device data: IP address; device identifier, type and model; mobile operating system; browser or mobile application details;</li>
-            <li>• Information transferred to us from our partners, e.g., from your cab company, etc.</li>
-            <li>•  Information that you provided to the support team: specified by you at your discretion; requested by us at our discretion.</li>
-        </ul>
+        <ol>
+            <li>User information in FASTA Driver app and checkout data: phone number, full name, driver license details, email, social security number (optional), national ID number (optional), date of birth, place of birth, gender, citizenship, residential address, photo, referral code (optional), operation experience as driver, numbers of executed orders in FASTA Driver app, car model and plate number;</li>
+            <li>Location data: to receive and successfully complete orders near your location, you need to allow location access in the background. FASTA processes your location data, including to enable the Service for Driver, namely, to access orders and transfer data about the driver's location to the user of FASTA app. FASTA collects this data when the FASTA Driver app is running in the foreground (app open and on-screen) or background (app open but not on-screen) of your mobile device.</li>
+            <li>Transaction data: date and time of the order, pick-up point, destination point, route, price, payment method;</li>
+            <li>Device data: IP address; device identifier, type and model; mobile operating system; browser or mobile application details;</li>
+            <li>Information transferred to us from our partners, e.g., from your cab company, etc.</li>
+            <li>Information that you provided to the support team: specified by you at your discretion; requested by us at our discretion.</li>
+        </ol>
       </li>
       <li>
         2.2. Your data are only shared with our partners that:
