--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
   <footer class="mt-auto text-white-50">
     <nav class="nav nav-masthead justify-content-center float-md-end">
       <a class="nav-link" target="_blank" href="./privacy-policy">Privacy policy</a>
+      <a class="nav-link" target="_blank" href="./driver-privacy-policy">Driver Privacy policy</a>
       <a class="nav-link" target="_blank" href="./license-agreement">License agreement</a>
       <a class="nav-link" target="_blank" href="./driver-agreement">Driver agreement</a>
       <a class="nav-link" target="_blank" href="./user-agreement">User agreement</a>
