--- a/index.html
+++ b/index.html
@@ -51,11 +51,15 @@
 
   <footer class="mt-auto text-white-50">
     <nav class="nav nav-masthead justify-content-center float-md-end">
-      <a class="nav-link" target="_blank" href="./privacy-policy">Privacy policy</a>
-      <a class="nav-link" target="_blank" href="./driver-privacy-policy">Driver Privacy policy</a>
+      <div>
       <a class="nav-link" target="_blank" href="./license-agreement">License agreement</a>
       <a class="nav-link" target="_blank" href="./driver-agreement">Driver agreement</a>
       <a class="nav-link" target="_blank" href="./user-agreement">User agreement</a>
+      </div>
+      <div>
+        <a class="nav-link" target="_blank" href="./privacy-policy">Privacy policy</a>
+        <a class="nav-link" target="_blank" href="./driver-privacy-policy">Driver privacy policy</a>
+      </div>
     </nav>
   </footer>
 </div>
