--- a/index.html
+++ b/index.html
@@ -50,16 +50,14 @@
   </main>
 
   <footer class="mt-auto text-white-50">
-    <nav class="nav nav-masthead justify-content-center float-md-end">
-      <div>
+    <nav class="nav nav-masthead justify-content-center">
       <a class="nav-link" target="_blank" href="./license-agreement">License agreement</a>
       <a class="nav-link" target="_blank" href="./driver-agreement">Driver agreement</a>
       <a class="nav-link" target="_blank" href="./user-agreement">User agreement</a>
-      </div>
-      <div>
-        <a class="nav-link" target="_blank" href="./privacy-policy">Privacy policy</a>
-        <a class="nav-link" target="_blank" href="./driver-privacy-policy">Driver privacy policy</a>
-      </div>
+    </nav>
+    <nav class="nav nav-masthead justify-content-center">
+      <a class="nav-link" target="_blank" href="./privacy-policy">Privacy policy</a>
+      <a class="nav-link" target="_blank" href="./driver-privacy-policy">Driver privacy policy</a>
     </nav>
   </footer>
 </div>
