--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     <nav class="nav nav-masthead justify-content-center">
       <a class="nav-link" target="_blank" href="./privacy-policy">Privacy policy</a>
       <a class="nav-link" target="_blank" href="./driver-privacy-policy">Driver privacy policy</a>
+      <a class="nav-link" target="_blank" href="mailto:davis.evans@aleka.tech">Support</a>
     </nav>
   </footer>
 </div>
